# marty-the-expense-tracker

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  cli.py  entrypoint.sh  main.py  pyproject.toml
backend/.cursor/rules/: backend-directory.mdc  backend-requirements.mdc  environment-config.mdc  import-standards.mdc  logging-and-env.mdc  logging-standards.mdc  poetry-environment.mdc  test-organization.mdc
backend/alembic/: env.py
backend/alembic/versions/: 0d03407f2300_remove_category_text_column_use_.py  4b025858c243_add_user_description_to_transactions.py  ab264540eef4_add_paid_by_field_to_transactions_table.py  d3e4f5g6h7i8_add_participants_table.py  dc5561557077_add_is_flagged_to_transactions.py  e8f7aea1fe10_initial_migration_for_existing_tables.py
backend/configs/: .env
backend/scripts/: README.md  STATEMENT_PROCESSING_WORKFLOW.md  check_uncategorized_transactions.py  compare_december_email_transactions.py  complete_statement_processing.py  create_sample_tags.py  download_latest_attachment.py  download_statement.py  fetch_emails.py  init_db.py  keep_tokens_alive.py  manage_bank_passwords.py  manage_cloud_sql_instance.sh  manage_splitwise_participants.py  monitor_gmail_tokens.py  process_amazon_pay_icici_manual.py  process_axis_bank_statement.py  process_axis_bank_workflow.py  process_sbi_savings_manual.py  process_statement.py  process_yes_bank_manual.py  regenerate_both_accounts.py  regenerate_gmail_tokens.py  regenerate_tokens_helper.py  run_email_alert_ingestion.py  run_statement_processing_workflow.py  run_workflow_with_resume.py  setup_secondary_email.py  smoke_extraction.py  smoke_test_dedup.py  smoke_test_email_reconciliation.py  smoke_test_extraction.py  smoke_test_workflow.py  standardize_transactions.py  test_page_filter.py  test_pdf_matching.py  validate_email_dedup.py  validate_extraction.py  verify_category_migration.py
backend/src/apis/routes/: auth_routes.py  budget_routes.py  email_alert_routes.py  email_ingestion_routes.py  expense_routes.py  mail_routes.py  participant_routes.py  review_queue_routes.py  settlement_routes.py  splitwise_routes.py  transaction_read_routes.py  transaction_routes.py  transaction_split_routes.py  transaction_write_routes.py  upload_routes.py  workflow_routes.py
backend/src/apis/schemas/: __init__.py  budgets.py  email_ingestion.py  settlements.py  transactions.py  workflow.py
backend/src/models/: __init__.py  account.py  category.py  participant.py  tag.py  transaction.py  transaction_tag.py
backend/src/schemas/: __init__.py
backend/src/schemas/api/: __init__.py  common.py  participants.py  settlements.py
backend/src/schemas/database/: __init__.py
backend/src/schemas/extraction/: __init__.py  splitwise.py  statement_extraction.py
backend/src/services/: budget_service.py
backend/src/services/cloud_storage/: __init__.py  gcs_service.py
backend/src/services/database_manager/: __init__.py  connection.py  models.py  operations.py  schemas.py
backend/src/services/email_ingestion/: alert_ingestion_service.py  alert_parser.py  alert_rules.py  alert_service.py  auth.py  client.py  dedup_service.py  gmail.py  service.py  token_manager.py
backend/src/utils/: auth_deps.py  db_utils.py  filename_utils.py  jwt_utils.py  logger.py  password_manager.py  settings.py  transaction_utils.py
backend/tests/: test_api_integration.py  test_budget_api.py  test_cancel_recurring.py  test_complete_workflow.py  test_data_standardizer_helper.py  test_dedup_service.py  test_email_parsers.py  test_pdf_page_filter.py  test_settlement_calculations.py  test_splitwise_routes.py  test_statement_dedup_integration.py  test_transaction_standardizer.py  test_workflow_orchestrator.py  test_workflow_sse.py  test_workflow_toggle_integration.py
caddy/: Caddyfile
(+237 files in other folders)
