[tool.poetry]
name = "expense-tracker-backend"
version = "0.1.0"
description = "LLM-powered personal expense tracker backend (FastAPI + LangChain + PostgreSQL)"
authors = ["Chaitanya"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
orjson = "^3.10.3"
pydantic = "^2.7.1"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
langchain = "^0.2.6"
langchain-core = "^0.2.11"
langchain-community = "^0.2.5"
langchain-openai = "^0.1.8"
openai = "^1.37.1"
google-api-python-client = "^2.136.0"
google-auth = "^2.31.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
pandas = "^2.2.2"
PyMuPDF = "^1.24.0"
landingai-ade = ">=1.9.0"
google-cloud-storage = "^3.3.1"
beautifulsoup4 = "^4.12.0"
html5lib = "^1.1"
lxml = "^5.0"
greenlet = "^3.3.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
slowapi = "^0.1.9"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


